# Gherkin-Demos

./: .gitmodules  README.md  soundex.feature
coffee/: .gitignore  README.md  gulpfile.js  package.json
coffee/lib/coffee/: Soundex.coffee
coffee/lib/coffee/test/features/step_definitions/: SoundexGherkinTest.coffee
cpp/: CMakeLists.txt  README.md
cpp/cmake/modules/: FindCppSpec.cmake  FindGMock.cmake
cpp/lib/: CMakeLists.txt
cpp/lib/soundex/: soundex.cpp  soundex.h
cpp/test/: CMakeLists.txt
csharp/: .gitignore  README.md  csharp.sln
csharp/csharp/: .gitignore  Soundex.cs  SoundexAlgorithmSteps.cs  csharp.csproj
csharp/csharp/Feature/: soundex.feature  soundex.feature.cs
csharp/csharp/Properties/: AssemblyInfo.cs
java/: .gitignore  README.md
java/src/main/java/com/gherkin/demo/: Soundex.java
java/src/test/java/com/gherkin/demo/gherkin/features/: soundex.feature
java/src/test/java/com/gherkin/demo/gherkin/steps/: SoundexTestGherkin.java
java/src/test/java/feature/demo/: SoundexStep.java  SoundexTest.java
java/src/test/resources/feature/demo/: soundex.feature
mono/: .gitignore  README.md
python/: README.md
python/src/: mysoundex.py  soundex.py
python/test/features/steps/: soundexGherkinTest.py
python/test/steps/: soundexGherkinTest.py
ruby/: README.md
ruby/src/: my_soundex.rb
ruby/test/features/step_definitions/: soundexGherkinTest.rb
